# ChangeLog for dev-util/pccts
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/pccts/ChangeLog,v 1.26 2009/01/20 22:21:56 aballier Exp $

  20 Jan 2009; Alexis Ballier <aballier@gentoo.org> pccts-1.33.33.ebuild:
  keyword ~x86-fbsd

  27 Jan 2008; Fabian Groffen <grobian@gentoo.org> pccts-1.33.33.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  14 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  06 Jan 2007; Danny van Dyk <kugelfang@gentoo.org>
  -pccts-1.33.32-r1.ebuild:
  QA: Removed unused versions.

  29 Jul 2005; Daniel Black <dragonheart@gentoo.org>
  pccts-1.33.32-r1.ebuild, pccts-1.33.33.ebuild:
  removed die from epatch || die.

  21 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> pccts-1.33.33.ebuild:
  Stable on ppc.

  06 Feb 2005; Markus Rothe <corsair@gentoo.org> pccts-1.33.33.ebuild:
  Stable on ppc64

  18 Dec 2004; Markus Rothe <corsair@gentoo.org> pccts-1.33.33.ebuild:
  added ~ppc64 to KEYWORDS; bug #74828

  09 Nov 2004; Carsten Lohrke <carlo@gentoo.org> pccts-1.33.32-r1.ebuild,
  pccts-1.33.33.ebuild:
  hooray for cd ${S}, inherit eutils

  06 Nov 2004; <pyrania@gentoo.org> pccts-1.33.32-r1.ebuild,
  pccts-1.33.33.ebuild:
  Hooray for epatch.

  29 Sep 2004; kito pccts-1.33.33.ebuild:
  added ~ppc-macos keyword

  12 Mar 2004; Gustavo Zacarias <gustavoz@gentoo.org> pccts-1.33.33.ebuild:
  stable on sparc

  29 Jan 2004; <agriffis@gentoo.org> pccts-1.33.33.ebuild:
  stable on alpha and ia64

  26 Oct 2003; Brad House <brad_mssw@gentoo.org> pccts-1.33.33.ebuild:
  add amd64 flag

*pccts-1.33.33 (11 Jun 2003)

  11 Jul 2003; Guy Martin <gmsoft@gentoo.org> pccts-1.33.33.ebuild :
  Added hppa to KEYWORDS.

  11 Jun 2003; Patrick Kursawe <phosphan@gentoo.org> pccts-1.33.33.ebuild,
  files/pccts-1.33.33-gentoo.diff:
  Bumping to maintainance release .33

  23 May 2003; Patrick Kursawe <phosphan@gentoo.org>